--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ counters: {
           jungler: ["Nakroth", "Han Xin", "Wukong"],
           mid: ["Kong Ming", "Gao Jianli", "Angela", "Daji"],
           roamer: ["Lian Po", "Donghuang Taiyi"],
-          farmLaner: ["Hou Yi", "Luban No.7", "Marco Polo, "Lady Sun"]
+          farmLaner: ["Hou Yi", "Luban No.7", "Marco Polo", "Lady Sun"]
         }
       },
       {
