--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <ul class="nav-links">
       <li><a href="index.html" class="active">Home</a></li>
       <li class="dropdown">
-        <a href="hero_counters.html" class="dropbtn">Hero Counters</a>
+        <a href="" class="dropbtn">Hero Counters</a>
         <div class="dropdown-content">
           <a href="clash.html">Clash</a>
           <a href="roamer.html">Roamer</a>
