--- a/jungling.html
+++ b/jungling.html
@@ -6,6 +6,7 @@
   <title>Honor of Kings Academy - Clash Heroes</title>
   <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/styles.css">
+  <link rel="icon" type="image/png" href="images/hokacademy.png">
 </head>
 <body>
   <!-- Navigation Bar -->
