--- a/jungling.html
+++ b/jungling.html
@@ -11,6 +11,9 @@
 <body>
   <!-- Navigation Bar -->
   <div class="navbar">
+    <div class="logo">
+      <img src="images/hokacademy.png" alt="HOK Academy Logo">
+    </div>
     <ul class="nav-links">
       <li><a href="index.html" class="active">Home</a></li>
       <li class="dropdown">
