--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </ul>
   </div>
 
-  <div class="hero-banner">
+ <div class="hero-banner" style="background-image: url('images/background.jpg');">
     <h1>Welcome to Honor of Kings Academy</h1>
   </div>
 
