--- a/farmlane.html
+++ b/farmlane.html
@@ -30,7 +30,7 @@
     </ul>
   </div>
 
-  <div class="hero-counters-container">
+  <div class="container">
     <h1>Honor of Kings Farm Lane Counters</h1>
     <div class="search-container">
       <input
