--- a/clash.html
+++ b/clash.html
@@ -6,14 +6,10 @@
   <title>Honor of Kings Academy - Clash Heroes</title>
   <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/styles.css">
-  <link rel="icon" type="image/png" href="images/hokacademy.png">
 </head>
 <body>
   <!-- Navigation Bar -->
   <div class="navbar">
-    <div class="logo">
-      <img src="images/hokacademy.png" alt="HOK Academy Logo">
-    </div>
     <ul class="nav-links">
       <li><a href="index.html" class="active">Home</a></li>
       <li class="dropdown">
@@ -30,7 +26,7 @@
     </ul>
   </div>
 
-  <div class="container">
+  <div class="hero-counters-container">
     <h1>Honor of Kings Clash Counters</h1>
     <div class="search-container">
       <input
