--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <ul class="nav-links">
       <li><a href="index.html" class="active">Home</a></li>
       <li class="dropdown">
-        <a href="" class="dropbtn">Hero Counters</a>
+        <a href="hero_counters.html" class="dropbtn">Hero Counters</a>
         <div class="dropdown-content">
           <a href="clash.html">Clash</a>
           <a href="roamer.html">Roamer</a>
@@ -26,10 +26,11 @@
         </div>
       </li>
       <li><a href="meta.html">Meta</a></li>
+      <li><a href="items.html">Items</a></li>
     </ul>
   </div>
 
- <div class="hero-banner" style="background-image: url('images/background.jpg');">
+  <div class="hero-banner" style="background-image: url('images/background.jpg');">
     <h1>Welcome to Honor of Kings Academy</h1>
   </div>
 
