--- a/clash.html
+++ b/clash.html
@@ -13,22 +13,32 @@
     <div class="logo">
       <img src="images/hokacademy.png" alt="HOK Academy Logo">
     </div>
-    <ul class="nav-links">
-      <li><a href="index.html" class="active">Home</a></li>
-      <li class="dropdown">
-        <a href="#" class="dropbtn">Hero Counters</a>
-        <div class="dropdown-content">
-          <a href="clash.html">Clash</a>
-          <a href="roamer.html">Roamer</a>
-          <a href="jungling.html">Jungling</a>
-          <a href="mid.html">Mid</a>
-          <a href="farmlane.html">Farm Lane</a>
+    <div class="navbar">
+          <div class="logo">
+            <img src="images/hokacademy.png" alt="HOK Academy Logo">
+          </div>
+          <ul class="nav-links">
+            <li><a href="index.html" class="active">Home</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropbtn">Hero Counters</a>
+              <div class="dropdown-content">
+                <a href="clash.html">Clash</a>
+                <a href="roamer.html">Roamer</a>
+                <a href="jungling.html">Jungling</a>
+                <a href="mid.html">Mid</a>
+                <a href="farmlane.html">Farm Lane</a>
+              </div>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropbtn">Beginner's Corner</a>
+              <div class="dropdown-content">
+                <a href="hok101.html">Playing HOK 101</a>
+              </div>
+            </li>
+            <li><a href="meta.html">Meta</a></li>
+            <li><a href="items.html">Items</a></li>
+          </ul>
         </div>
-      </li>
-      <li><a href="meta.html">Meta</a></li>
-    </ul>
-  </div>
-
   <div class="hero-counters-container">
     <h1>Honor of Kings Clash Counters</h1>
     <div class="search-container">
