--- a/index.html
+++ b/index.html
@@ -13,22 +13,32 @@
     <div class="logo">
       <img src="images/hokacademy.png" alt="HOK Academy Logo">
     </div>
-    <ul class="nav-links">
-      <li><a href="index.html" class="active">Home</a></li>
-      <li class="dropdown">
-        <a href="hero_counters.html" class="dropbtn">Hero Counters</a>
-        <div class="dropdown-content">
-          <a href="clash.html">Clash</a>
-          <a href="roamer.html">Roamer</a>
-          <a href="jungling.html">Jungling</a>
-          <a href="mid.html">Mid</a>
-          <a href="farmlane.html">Farm Lane</a>
+    <div class="navbar">
+          <div class="logo">
+            <img src="images/hokacademy.png" alt="HOK Academy Logo">
+          </div>
+          <ul class="nav-links">
+            <li><a href="index.html" class="active">Home</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropbtn">Hero Counters</a>
+              <div class="dropdown-content">
+                <a href="clash.html">Clash</a>
+                <a href="roamer.html">Roamer</a>
+                <a href="jungling.html">Jungling</a>
+                <a href="mid.html">Mid</a>
+                <a href="farmlane.html">Farm Lane</a>
+              </div>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropbtn">Beginner's Corner</a>
+              <div class="dropdown-content">
+                <a href="hok101.html">Playing HOK 101</a>
+              </div>
+            </li>
+            <li><a href="meta.html">Meta</a></li>
+            <li><a href="items.html">Items</a></li>
+          </ul>
         </div>
-      </li>
-      <li><a href="meta.html">Meta</a></li>
-      <li><a href="items.html">Items</a></li>
-    </ul>
-  </div>
 
   <div class="hero-banner" style="background-image: url('images/background.jpg');">
     <h1>Welcome to Honor of Kings Academy</h1>
@@ -38,6 +48,14 @@
     <div class="section">
       <h2>Beginner's Corner</h2>
       <p>New to the game? Learn the basics of Honor of Kings, from hero roles to map strategies. Start climbing the ranks today!</p>
+      <div class="hero-grid">
+        <div class="hero-card">
+          <img src="images/hok101.jpg" alt="Playing HOK 101">
+          <h3>Playing HOK 101</h3>
+          <p>A comprehensive guide for new players to understand the game's fundamentals.</p>
+          <a href="hok101.html" class="read-more">Read More</a>
+        </div>
+      </div>
     </div>
 
     <div class="section">
