--- a/clash.html
+++ b/clash.html
@@ -9,36 +9,32 @@
 </head>
 <body>
   <!-- Navigation Bar -->
-  <div class="navbar">
+  <nav class="navbar">
     <div class="logo">
       <img src="images/hokacademy.png" alt="HOK Academy Logo">
     </div>
-    <div class="navbar">
-          <div class="logo">
-            <img src="images/hokacademy.png" alt="HOK Academy Logo">
-          </div>
-          <ul class="nav-links">
-            <li><a href="index.html" class="active">Home</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropbtn">Hero Counters</a>
-              <div class="dropdown-content">
-                <a href="clash.html">Clash</a>
-                <a href="roamer.html">Roamer</a>
-                <a href="jungling.html">Jungling</a>
-                <a href="mid.html">Mid</a>
-                <a href="farmlane.html">Farm Lane</a>
-              </div>
-            </li>
-            <li class="dropdown">
-              <a href="#" class="dropbtn">Beginner's Corner</a>
-              <div class="dropdown-content">
-                <a href="hok101.html">Playing HOK 101</a>
-              </div>
-            </li>
-            <li><a href="meta.html">Meta</a></li>
-            <li><a href="items.html">Items</a></li>
-          </ul>
+    <ul class="nav-links">
+      <li><a href="index.html" class="active">Home</a></li>
+      <li class="dropdown">
+        <a href="#" class="dropbtn">Hero Counters</a>
+        <div class="dropdown-content">
+          <a href="clash.html">Clash</a>
+          <a href="roamer.html">Roamer</a>
+          <a href="jungling.html">Jungling</a>
+          <a href="mid.html">Mid</a>
+          <a href="farmlane.html">Farm Lane</a>
         </div>
+      </li>
+      <li class="dropdown">
+        <a href="#" class="dropbtn">Beginner's Corner</a>
+        <div class="dropdown-content">
+          <a href="hok101.html">Playing HOK 101</a>
+        </div>
+      </li>
+      <li><a href="meta.html">Meta</a></li>
+      <li><a href="items.html">Items</a></li>
+    </ul>
+  </nav>
   <div class="hero-counters-container">
     <h1>Honor of Kings Clash Counters</h1>
     <div class="search-container">
