--- a/hok101.html
+++ b/hok101.html
@@ -35,7 +35,7 @@
       <li><a href="items.html">Items</a></li>
     </ul>
   </nav>
-  <div class="blog-container">
+  <div class="container">
     <h1>Getting Started: A Beginner's Guide to Honor of Kings</h1>
     
     <p>Honor of Kings is an exciting and strategic MOBA (Multiplayer Online Battle Arena) game where two teams of five heroes compete to destroy each other's base. If you're new to the game, this guide will introduce you to the fundamentals, including hero roles, map layout, objectives, and basic controls. Let's dive in and help you get started on your journey to mastering the game.</p>
