--- a/hok101.html
+++ b/hok101.html
@@ -45,6 +45,9 @@
     <p><strong>Game Format:</strong> Matches are played in a 5v5 format on a three-lane map. Each team defends their side of the map while pushing forward to attack the enemy's base.</p>
 
     <h2>2. The Map Layout</h2>
+    <div class="image-container">
+      <img src="images/hok_map.jpg" alt="Honor of Kings Map Layout" class="responsive-image">
+    </div>
     <p>The Honor of Kings map is split into three main areas:</p>
 
     <h3>Three Lanes</h3>
@@ -59,8 +62,14 @@
     <p>The areas between the lanes filled with neutral monsters. The Jungler farms these monsters to gain gold, experience, and powerful buffs.</p>
 
     <h3>Turrets and Objectives</h3>
+    <div class="image-container">
+      <img src="images/tower.jpg" alt="Honor of Kings Tower" class="responsive-image">
+    </div>
     <p><strong>Turrets:</strong> Structures that defend the lanes. Your team must destroy enemy turrets to progress toward their Core Crystal.</p>
     <p><strong>Objectives:</strong> Key neutral monsters appear in the jungle:</p>
+    <div class="image-container">
+      <img src="images/overlord.jpg" alt="Overlord Objective" class="responsive-image">
+    </div>
     <ul>
       <li><strong>Overlord:</strong> Grants your team a powerful buff and pushes lanes.</li>
       <li><strong>Dark Slayer:</strong> Provides a team-wide stat boost.</li>
@@ -96,6 +105,9 @@
     <p><strong>Tip:</strong> Position carefully behind tanks or supports to deal consistent damage.</p>
 
     <h2>4. Controls and Gameplay Mechanics</h2>
+    <div class="image-container">
+      <img src="images/controls.jpg" alt="Honor of Kings Game Controls" class="responsive-image">
+    </div>
     <p>Mastering the controls is key to playing effectively:</p>
     <ul>
       <li><strong>Left Joystick:</strong> Use this to control your hero's movement.</li>
@@ -135,6 +147,19 @@
     <p>Congratulations! You now have a solid understanding of the basics of Honor of Kings. By learning the map layout, experimenting with different hero roles, and understanding the game's core mechanics, you'll quickly improve and enjoy your matches even more. Remember, practice and teamwork are key to becoming a better player.</p>
 
     <p>Good luck, and see you in the arena!</p>
+
+    <h2>Credits and Sources</h2>
+    <div class="credits-section">
+      <p>This guide is a community-driven resource created by Honor of Kings enthusiasts. We strive to provide accurate and helpful information to new players.</p>
+      <h3>Image Credits</h3>
+      <ul>
+        <li>Map Layout: Honor of Kings Wiki</li>
+        <li>Tower Image: Honor of Kings Game Screenshot</li>
+        <li>Overlord Objective: Honor of Kings Wiki</li>
+        <li>Game Controls: Screenshot from GameTech Anime</li>
+      </ul>
+      <p><strong>Disclaimer:</strong> All images and game content are the property of Tencent Games and Honor of Kings. This guide is created by fans and is not officially affiliated with the game developers.</p>
+    </div>
   </div>
 
   <footer>
